[package]
name = "mina-maya-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
prettytable-rs = "0.10.0"
colored = "2"
reqwest = "0.11.23"
serde = { version = "1.0.195",  features = ["derive"]}
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
youchoose = "0.1.1"
