[package]
name = "maya"
version = "0.1.0"
edition = "2021"
authors = ["Philosakha"]
license = "MIT"
description = "A CLI tool to interact with Mina blockchain"
readme = "README.md"
homepage = "https://github.com/Philosakha/rust-cli"
repository = "https://github.com/Philosakha/rust-cli"
keywords = ["cli", "mina", "maya", "blockchain"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
prettytable-rs = "0.10.0"
colored = "2"
reqwest = "0.11.23"
serde = { version = "1.0.195",  features = ["derive"]}
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
prettycli = "0.1.1"
terminal-menu = "3.0.0"
